Added the OAuth2 implicit integration tests Added webjars/bootstrap to gradle and removed locally stored bootstrap.css Added support footer to all of the JSP pages.

--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,10 @@ dependencies {
     compile group: 'org.apache.tomcat.embed',  name: 'tomcat-embed-jasper'
     compile group: 'javax.servlet',            name: 'jstl'
 
+    // Webjars (for css/js libs)
+    compile group: 'org.webjars',   name: 'webjars-locator',    version: '0.30'
+    compile group: 'org.webjars',   name: 'bootstrap',          version: '3.3.7'
+
     // Other
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     
