--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,4 +1,14 @@
 #######################################################################################################################
+# Application
+#######################################################################################################################
+app:
+  name: Launchpad
+  contact-support:
+    email: support@LighthouseSoftware.com
+    phone: 651-888-6021
+    website: http://LighthouseSoftware.com/support
+
+#######################################################################################################################
 # Logging
 #######################################################################################################################
 logging:
