--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,4 +1,13 @@
 #######################################################################################################################
+# Application
+#######################################################################################################################
+app:
+  name: Launchpad
+  support-email: support@LighthouseSoftware.com
+  support-phone: 651-888-6021
+  support-website: http://LighthouseSoftware.com/support
+
+#######################################################################################################################
 # Spring Configuration
 #######################################################################################################################
 spring:
