--- a/src/main/resources/db/changelog/v1-0/client_scope_type.yaml
+++ b/src/main/resources/db/changelog/v1-0/client_scope_type.yaml
@@ -32,7 +32,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: name
-                  value: Read_Data
+                  value: Read Data
               - column:
                   name: description
                   value: Read data on behalf of the user
@@ -41,7 +41,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: name
-                  value: Write_Data
+                  value: Write Data
               - column:
                   name: description
                   value: Write data on behalf of the user
