Added Gradle wrapper for easy building in Jenkins

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -61,9 +61,13 @@ server:
   contextPath: /
 
 #######################################################################################################################
-# Spring Security
+# Security
 #######################################################################################################################
 security:
+
+  ignored: /resources/**, /webjars/**
+  permitAll: /login, /hello
+
   oauth2:
     resource:
       id: launchpad
@@ -86,3 +90,6 @@ security:
     key-store-password: changeme
     private-key-name: jwt
     private-key-password: changeme
+
+  user-verification:
+    exclude-resources: /oauth/**, /resources/**, /webjars/**, /login, /WEB-INF/jsp/**.jsp
