Updated gradle with the apiDoc tasks Hooked apiDoc task to run before packageResources so that the /docs folder would be included within /WEB-INF/ folder Added exclusions to the Spring Boot app to ignore security on /docs

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,10 @@ out/
 
 # Locally generated files
 *.log
-/apidoc/docs/
+
+# apiDocs
+apidoc/node_modules
+src/main/webapp/docs
 
 # Exclude
 !gradle/wrapper/gradle-wrapper.jar
