--- a/apidoc/package.json
+++ b/apidoc/package.json
@@ -2,7 +2,10 @@
   "version": "1.0.0",
   "name": "launchpad-api",
   "private": true,
+  "dependencies": {
+    "apidoc": ">0.15.0"
+  },
   "scripts": {
-    "apidoc": "apidoc -o docs -i ../ -f \".groovy$\" -f \".js$\" "
+    "apidoc": "apidoc -o ../src/main/webapp/docs -i ../ -f \"/src/main/groovy/.*\\.groovy$\" -f \"/apidoc/templates.*\\.js$\" "
   }
 }
