--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -110,3 +110,6 @@ security:
 
   user-verification:
     exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /WEB-INF/jsp/**.jsp
+
+verifyEmailCodeExpireDays: 2
+resetPasswordCodeExpireDays: 2
