Updated OAuth2Config.ResourceServerConfig to bypass URLs in the application.yaml security.permitAll list

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -39,7 +39,7 @@ spring:
 security:
 
   ignored: /resources/**, /webjars/**
-  permitAll: /login, /hello
+  permitAll: /login, /api/hello
 
   oauth2:
     resource:
