--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -66,7 +66,7 @@ server:
 security:
 
   ignored: /resources/**, /webjars/**, /docs/**
-  permitAll: /login, /hello
+  permitAll: /login, /api/hello
 
   oauth2:
     resource:
