Added CorsConfig and defaulted the cors configuration to be open to the public with the ability to override it either within the application.yaml file or environment variables.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -93,3 +93,6 @@ security:
 
   user-verification:
     exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /WEB-INF/jsp/**.jsp
+
+  cors:
+    allowed-origin: '*'
