--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -73,3 +73,6 @@ security:
         standard-client:
           client-id: client-standard
           client-secret: secret
+
+  cors:
+    allowed-origin: '*'
