--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ dependencies {
         exclude(module: 'jackson-mapper-asl') // We already have a more recent jackson via Spring Boot
     }
 
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-aws-autoconfigure', version: '1.1.3.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-aws-messaging', version: '1.1.3.RELEASE'
+
     // Groovy
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version:'2.4.7'
 
