--- a/src/main/resources/db/changelog/v1-0/db.changelog.yaml
+++ b/src/main/resources/db/changelog/v1-0/db.changelog.yaml
@@ -6,6 +6,8 @@ databaseChangeLog:
   - include:
       file: db/changelog/v1-0/user_role.yaml
   - include:
+      file: db/changelog/v1-0/user_phone.yaml
+  - include:
       file: db/changelog/v1-0/permission.yaml
   - include:
       file: db/changelog/v1-0/role_permission.yaml
