--- a/src/main/resources/db/changelog/v1-0/_db.changelog.yaml
+++ b/src/main/resources/db/changelog/v1-0/_db.changelog.yaml
@@ -1,5 +1,7 @@
 databaseChangeLog:
   - include:
+      file: db/changelog/v1-0/action_log.yaml
+  - include:
       file: db/changelog/v1-0/audit_revinfo.yaml
   - include:
       file: db/changelog/v1-0/user.yaml
