--- a/src/main/resources/db/changelog/v1-0/security_question.yaml
+++ b/src/main/resources/db/changelog/v1-0/security_question.yaml
@@ -1,10 +1,10 @@
 databaseChangeLog:
   - changeSet:
-      id: v1.0-security-questions-table-create
+      id: v1.0-security-question-table-create
       author: Mythili Satyanarayana
       changes:
         - createTable:
-            tableName: security_questions
+            tableName: security_question
             columns:
               - column:
                   name: id
@@ -15,7 +15,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: question
-                  type: varchar(256)
+                  type: varchar(255)
                   constraints:
                     nullable: false
               - column:
@@ -24,11 +24,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
   - changeSet:
-      id: v1.0-security-questions-seed
+      id: v1.0-security-question-seed
       author: Mythili Satyanarayana
       changes:
         - insert:
-            tableName: security_questions
+            tableName: security_question
             columns:
               - column:
                   name: question
@@ -37,7 +37,7 @@ databaseChangeLog:
                   name: is_deleted
                   valueBoolean: false
         - insert:
-            tableName: security_questions
+            tableName: security_question
             columns:
               - column:
                   name: question
@@ -46,7 +46,7 @@ databaseChangeLog:
                   name: is_deleted
                   valueBoolean: false
         - insert:
-            tableName: security_questions
+            tableName: security_question
             columns:
               - column:
                   name: question
