--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -114,13 +114,13 @@ security:
 verify-code-expire-minutes: 30
 
 #password recovery constants
-acct-temp-suspended-message: 'Account is temporarily suspended. Please try again later'
-acct-locked-message: 'Account is locked. Please contact administrator'
-acct-temp-susp-min-attempts: 3
-acct-temp-susp-max-attempts: 7
-acct-temp-susp-duration: 5
-acct-extended-susp-max-attempts: 10
-acct-extended-susp-duration: 60
+account-temporary-suspend-message: 'Account is temporarily suspended. Please try again later'
+account-locked-message: 'Account is locked. Please contact administrator'
+account-temporary-suspend-min-attempts: 3
+account-temporary-suspend-max-attempts: 7
+account-temporary-suspend-duration: 5
+account-extended-suspend-max-attempts: 10
+account-extended-suspend-duration: 60
 
 cloud.aws credentials.accessKey: 0T2QFBSAJH0TTA9Q0MR2
 cloud.aws.credentials.secretKey: 5VtpEPJlFKxHx9JBGgoLzzZ7OvXdAdzoaYQyJgO7
