--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,6 @@
 databaseChangeLog:
   - include:
       file: db/changelog/v1-0/db.changelog.yaml
+  - include:
+      file: db/changelog/test/db.changelog.yaml
+
