Added aws configuration note

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -92,6 +92,9 @@ security:
 
 verify-code-expire-minutes: 30
 
+#######################################################################################################################
+# AWS Configuration to send Emails and SMS TODO: need to move this configuration to server in other environments
+#######################################################################################################################
 cloud.aws.credentials.accessKey: 0T2QFBSAJH0TTA9Q0MR2
 cloud.aws.credentials.secretKey: 5VtpEPJlFKxHx9JBGgoLzzZ7OvXdAdzoaYQyJgO7
 cloud.aws.region.auto: true
