--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -120,3 +120,5 @@ cloud.aws credentials.accessKey: 0T2QFBSAJH0TTA9Q0MR2
 cloud.aws.credentials.secretKey: 5VtpEPJlFKxHx9JBGgoLzzZ7OvXdAdzoaYQyJgO7
 cloud.aws.region.auto: true
 cloud.aws.region.static: us-east-1
+
+liquibase.contexts: '!test'
