--- a/src/main/resources/db/changelog/v1-0/user.yaml
+++ b/src/main/resources/db/changelog/v1-0/user.yaml
@@ -90,6 +90,16 @@ databaseChangeLog:
                   type: bit(1)
                   constraints:
                     nullable: false
+              - column:
+                  name: verify_code_expires_on
+                  type: datetime
+                  constraints:
+                    nullable: true
+              - column:
+                  name: verify_code
+                  type: varchar(255)
+                  constraints:
+                    nullable: true
   - changeSet:
       id: v1.0-user-audit-table-create
       author: Voyage
