--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -6,6 +6,10 @@ app:
   support-email: support@LighthouseSoftware.com
   support-phone: 651-888-6021
   support-website: http://LighthouseSoftware.com/support
+  contact-support:
+    email: support@LighthouseSoftware.com
+    phone: 651-888-6021
+    website: http://LighthouseSoftware.com/support
 
 #######################################################################################################################
 # Spring Configuration
