--- a/src/main/resources/db/changelog/test/user.yaml
+++ b/src/main/resources/db/changelog/test/user.yaml
@@ -40,6 +40,18 @@ databaseChangeLog:
               - column:
                   name: is_deleted
                   valueBoolean: false
+              - column:
+                  name: created_by
+                  value: super
+              - column:
+                  name: created_date
+                  value: "2013-03-19 16:57:04"
+              - column:
+                  name: last_modified_by
+                  value: super
+              - column:
+                  name: last_modified_date
+                  value: "2013-03-19 16:57:04"
         - insert:
             tableName: user
             columns:
@@ -76,3 +88,15 @@ databaseChangeLog:
               - column:
                   name: is_deleted
                   valueBoolean: false
+              - column:
+                  name: created_by
+                  value: super
+              - column:
+                  name: created_date
+                  value: "2013-03-19 16:57:04"
+              - column:
+                  name: last_modified_by
+                  value: super
+              - column:
+                  name: last_modified_date
+                  value: "2013-03-19 16:57:04"
