--- a/build.gradle
+++ b/build.gradle
@@ -42,16 +42,15 @@ dependencies {
     compile group: 'org.springframework.boot',          name: 'spring-boot-starter-web',             version:"${springBootVersion}"
     compile group: 'org.springframework.boot',          name: 'spring-boot-starter-data-jpa',        version:"${springBootVersion}"
     compile group: 'org.springframework.boot',          name: 'spring-boot-starter-security',        version:"${springBootVersion}"
-    compile group: 'org.springframework.security',      name: 'spring-security-jwt',             version:'1.0.7.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-mail',    version:"${springBootVersion}"
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker',    version:"${springBootVersion}"
-
-    compile(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2',    version:'2.0.12.RELEASE') {
+    compile group: 'org.springframework.boot',          name: 'spring-boot-starter-mail',            version:"${springBootVersion}"
+    compile group: 'org.springframework.boot',          name: 'spring-boot-starter-freemarker',      version:"${springBootVersion}"
+    compile group: 'org.springframework.cloud',         name: 'spring-cloud-aws-autoconfigure',      version: '1.1.3.RELEASE'
+    compile group: 'org.springframework.cloud',         name: 'spring-cloud-aws-messaging',          version: '1.1.3.RELEASE'
+    //compile group: 'org.springframework.security',      name: 'spring-security-test',                version:'4.2.1.RELEASE'
+    compile group: 'org.springframework.security',      name: 'spring-security-jwt',                 version:'1.0.7.RELEASE'
+    compile(group: 'org.springframework.security.oauth', name: 'spring-security-oauth2',             version:'2.0.12.RELEASE') {
         exclude(module: 'jackson-mapper-asl') // We already have a more recent jackson via Spring Boot
     }
-
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-aws-autoconfigure', version: '1.1.3.RELEASE'
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-aws-messaging', version: '1.1.3.RELEASE'
 
     // Groovy
     compile group: 'org.codehaus.groovy', name: 'groovy-all', version:'2.4.7'
