--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -58,7 +58,7 @@ spring:
 security:
 
   ignored: /resources/**, /webjars/**
-  permitAll: /login, /api/hello
+  permitAll: /login, /api/status
 
   oauth2:
     resource:
@@ -96,7 +96,7 @@ security:
   cors:
     access-control-allow-headers: Accept, Authorization, Content-Type, Cookie, Origin, User-Agent
 
-verify-code-expire-minutes: 30
+  verify-code-expire-minutes: 30
 
 #######################################################################################################################
 # AWS Configuration to send Emails and SMS TODO: need to move this configuration to server in other environments
