--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -99,9 +99,9 @@ security:
   verify-code-expire-minutes: 30
 
 #######################################################################################################################
-# AWS Configuration to send Emails and SMS TODO: need to move this configuration to server in other environments
+# AWS Configuration to send Emails and SMS
 #######################################################################################################################
-cloud.aws.credentials.accessKey: 0T2QFBSAJH0TTA9Q0MR2
-cloud.aws.credentials.secretKey: 5VtpEPJlFKxHx9JBGgoLzzZ7OvXdAdzoaYQyJgO7
+cloud.aws.credentials.accessKey:
+cloud.aws.credentials.secretKey:
 cloud.aws.region.auto: true
 cloud.aws.region.static: us-east-1
