--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -121,16 +121,16 @@ security:
           -----END PUBLIC KEY-----
 
   user-verification:
-    exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify/*, /WEB-INF/jsp/**.jsp
+    exclude-resources: /oauth/**, /resources/**, /webjars/**, /docs/**, /login, /api/**/verify, /api/**/verify/send, /WEB-INF/jsp/**.jsp
+    verify-code-expire-minutes: 30
 
   cors:
     access-control-allow-headers: Accept, Authorization, Content-Type, Cookie, Origin, User-Agent
 
-  verify-code-expire-minutes: 30
-
 #######################################################################################################################
 # AWS Configuration to send Emails and SMS
 #######################################################################################################################
+cloud.aws.enabled: false
 cloud.aws credentials.accessKey: ENTER YOUR CODE
 cloud.aws.credentials.secretKey: ENTER YOUR CODE
 cloud.aws.region.auto: true
