--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,29 +1,9 @@
 databaseChangeLog:
-
-# ${now} property for seed data datetime values
-  - property:
-      name: now
-      value: sysdate
-      dbms: oracle
-  - property:
-      name: now
-      value: now()
-      dbms: mysql
-  - property:
-      name: now
-      value: now()
-      dbms: postgresql
-  - property:
-      name: now
-      value: getdate()
-      dbms: mssql
-  - property:
-      name: now
-      value: now()
-      dbms: h2
+  - include:
+      file: db/changelog/db.properties.yaml
 
 # Versions
   - include:
       file: db/changelog/v1-0/_db.changelog.yaml
   - include:
-      file: db/changelog/test/db.changelog.yaml
+      file: db/changelog/test/_db.changelog.yaml
